feat: [EBE-496] Send reversal event to idpay-transaction queue (#307)
Co-authored-by: Christian Geovese <cgenoves@emeal.nttdata.com>
Co-authored-by: EMORONGD6 <guido.moroni@emeal.nttdata.com>